5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1723_2508.log
== TEST (2019-05-11 20:35:00) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4

while(c < n):
	pi = 3 + (4)/(x * y * z)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(pi)
	
-- OUTPUT:
3.003030303030303
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:35:17) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4

while(c < n):
	pi = 3 + (4)/(x * y * z)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(pi)
	
-- OUTPUT:
3.003030303030303
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:35:32) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 1
x = 2
y = 3
z = 4

while(c < n):
	pi = 3 + (4)/(x * y * z)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(pi)
	
-- OUTPUT:
3.0055555555555555
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:35:47) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 1
x = 2
y = 3
z = 4

while(c <= n):
	pi = 3 + (4)/(x * y * z)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(pi)
	
-- OUTPUT:
3.003030303030303
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:36:27) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4

while(c < n):
	pi = 3 + (-1*(4)/(x * y * z))
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(pi)
	
-- OUTPUT:
2.996969696969697
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:36:38) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4

while(c < n):
	pi = 3 + (-1*(4)/(x * y * z))
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(pi)
	
-- OUTPUT:
2.996969696969697
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:36:51) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4

while(c < n):
	pi = 3 + ((4)/(x * y * z))
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(pi)
	
-- OUTPUT:
3.003030303030303
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:38:51) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = ((4)/(x * y * z)) + (-1*((4)/(x * y * z)))
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:39:02) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = ((4)/(x * y * z)) + (-1*((4)/(x * y * z)))
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:39:14) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = ((4)/(x * y * z)) + (-1*((4)/(x * y * z)))
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:39:58) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + m)*(-1)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:40:06) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + m)*(-1)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:40:16) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + m)*(-1)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:41:05) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + m)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:41:10) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + m)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:41:18) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + m)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:41:33) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + m)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:41:44) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + m)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:41:55) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + m)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:42:02) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + m)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 20:42:10) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + m)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- EXECUTION TIME:
0.102109
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.21746032
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.22689488
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.226719
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:42:40) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = (((4)/(x * y * z)) + (m*(-1))
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- ERROR:
File "XXXX", line 11
    x = x + 2
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:42:55) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = ((4)/(x * y * z)) + (m*(-1))
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
2.86031746
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:43:01) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = ((4)/(x * y * z)) + (m*(-1))
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
2.86031746
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:43:08) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = ((4)/(x * y * z)) + (m*(-1))
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
2.86031746
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:47:05) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m =(((4)/(x * y * z)) + m) * (-1)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:47:13) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m =(((4)/(x * y * z)) + m) * (-1)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 20:47:19) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m =(((4)/(x * y * z)) + m) * (-1)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- EXECUTION TIME:
0.135602
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
2.85838393
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:47:22) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m =(((4)/(x * y * z)) + m) * (-1)
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:48:30) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = ((4)/(x * y * z))*(-1) + m
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
2.78253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:48:40) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = ((4)/(x * y * z))*(-1) + m
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
2.78253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:48:45) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = ((4)/(x * y * z))*(-1) + m
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
2.78253968
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:48:58) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	pi = 3 + m
	m = ((4)/(x * y * z))+ m
	x = x + 2
	y = y + 2
	z = z + 2
	c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:50:19) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	if(c = 1):
		pi = 3
	elif:
		pi = 3 + m
		m = ((4)/(x * y * z))+ m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- ERROR:
File "XXXX", line 9
    if(c = 1):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 20:50:35) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	if(c == 1):
		pi = 3
	elif:
		pi = 3 + m
		m = ((4)/(x * y * z))+ m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- EXECUTION TIME:
0.179499
-- ERROR:
  File "/home/codebench/codes/1723/2508/main.py", line 11
    elif:
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:50:37) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	if(c == 1):
		pi = 3
	elif:
		pi = 3 + m
		m = ((4)/(x * y * z))+ m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- ERROR:
File "XXXX", line 11
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:50:51) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	if(c == 1):
		pi = 3
	else:
		pi = 3 + m
		m = ((4)/(x * y * z))+ m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- ERROR:
File "XXXX", line 11
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:51:03) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	if(c == 1):
		pi = 3
	else:
		pi = 3 + m
		m = ((4)/(x * y * z))+ m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- ERROR:
File "XXXX", line 11
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:51:11) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	if(c == 1):
		pi = 3
	else:
		pi = 3 + m
		m = ((4)/(x * y * z))+ m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- ERROR:
File "XXXX", line 11
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:51:28) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m
		m = ((4)/(x * y * z))+ m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.21746032
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 20:53:10) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- EXECUTION TIME:
0.317146
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.00555556
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.00005034
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.00007903
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:53:11) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 20:53:17) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- EXECUTION TIME:
0.305667
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.00555556
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.00005034
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.00007903
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:53:27) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:53:33) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-11 20:53:44) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- OUTPUT:
3.00555556
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-11 20:58:01) 
-- CODE:
n = int(input("Numero de Termos:"))

c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
	if(c == 1):
		pi = 3
	else:
		pi = 3 + m
		m = ((4)/(x * y * z))+ m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1

print(round(pi, 8))
	
-- EXECUTION TIME:
421.3
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:50:13) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s+1
print(round(pi, 8))
	
-- OUTPUT:
2.99444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 12:50:26) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s+1
print(round(pi, 8))
	
-- EXECUTION TIME:
0.231395
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
2.99444444
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.00005034
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
2.99992097
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:50:32) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s+1
print(round(pi, 8))
	
-- OUTPUT:
2.99444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:50:38) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s+1
print(round(pi, 8))
	
-- OUTPUT:
2.99444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:50:41) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s+1
print(round(pi, 8))
	
-- OUTPUT:
2.99444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:50:51) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s+1
	print(round(pi, 8))
	
-- ERROR:
File "XXXX", line 16
    print(round(pi, 8))
                      ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:50:54) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s+1
		print(round(pi, 8))
	
-- OUTPUT:
3
3.16666667
2.96666667
3.01190476
2.99444444
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:52:34) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s + 1
		print(round(m, 8))
	
-- OUTPUT:
0.16666667
-0.03333333
0.01190476
-0.00555556
0.0030303
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:53:45) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s + m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s + 1
		print(round(m, 8))
	
-- OUTPUT:
0.16666667
0.13333333
0.1452381
0.13968254
0.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 12:54:50) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s + m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s + 1
		print(round(pi, 8))
	
-- OUTPUT:
3
3.16666667
3.13333333
3.1452381
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 12:54:57) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s + m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s + 1
		print(round(pi, 8))
	
-- EXECUTION TIME:
0.169122
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3
3.16666667
3.13333333
3.1452381
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3
3.16666667
3.13333333
3.1452381
3.13968254
3.14271284
3.14088134
3.14207182
3.14125482
3.14183962
3.14140672
3.1417361
3.14147969
3.14168319
3.14151899
3.14165339
3.14154199
3.14163536
3.14155633
3.14162381
3.14156573
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3
3.16666667
3.13333333
3.1452381
3.13968254
3.14271284
3.14088134
3.14207182
3.14125482
3.14183962
3.14140672
3.1417361
3.14147969
3.14168319
3.14151899
3.14165339
3.14154199
3.14163536
3.14155633
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 12:55:00) 
-- CODE:
n = int(input("Numero de Termos:"))
s = 2
c = 0
x = 2
y = 3
z = 4
m = 0
while(c < n):
		pi = 3 + m 
		m = ((4)/(x * y * z))*(-1)**s + m
		x = x + 2
		y = y + 2
		z = z + 2
		c = c + 1
		s = s + 1
print(round(pi, 8))
	
-- EXECUTION TIME:
0.223489
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
